AZUREUS CHANGELOG
-----------------


2007.12.xx | Azureus Vuze 3.0.4.1

CHANGE: Core  | Added option to disable download speed focus [The 8472]
CHANGE: Core  | Reduced memory usage for many-torrent instances [The 8472]

BUGFIX: Core  | fixed ip filters not working when ALLOW instead of DENY was used [parg]


2007.12.06 | Azureus Vuze 3.0.4.0

FEATURE: Core | Reconnect to peers after unexpected disconnect / recover stats of recently disconnected peers [Parg,The 8472]
FEATURE: Core | Global download speed limit can also limit the number of outgoing requests, this should improve TCP performance [The 8472]
                 -does not work with auto-speed since an explicit download speed-limit must be set
                 -downloads from as few peers as possible when the global limit is reached 
                 -prioritizes downloads which are on the head of the queue
FEATURE: Core | IP binding now provides primitive round-robin load balancing for users with multiple internet connections; accepts interface names and IPv6 binding (if supported on the platform) [The 8472]
FEATURE: Core | Embed ChangeLog.txt in release jar [Nolar]
FEATURE: UI   | Column menu option to automatically put contents of cell into the tooltip [amc1] 
FEATURE: UI   | Piece distribution view is now also available as a peer subview [The 8472]
FEATURE: UI   | Added 'time remaining' column to peers view [Parg]
FEATURE: UI   | Added option to suppress file download dialog [khai]
FEATURE: UI   | Various progress reports have been unified; main status bar can display progress for certain processes now [khai]
FEATURE: Plug | Plugins can now change the color of rows [amc1]
FEATURE: Plug | Plugins can add configuration colour parameters [amc1]

CHANGE: Core  | Attempt to re-open a file when access fails to try and recover from a transient error [Parg]
CHANGE: Core  | Auto speed default is now the new 'beta' (v2) algorithm [ranul]